prepare for cache invalidation implementation in CacheableDatabase